# CUDA

./: .gitignore
lab1/check_error/: CMakeLists.txt  check_error.cu  check_error.h  check_error_main.cc
lab2/add-mm/: add_mm.cu
lab2/blur/: blur.cu  blur_main.cc
lab2/blur/output-data/: reference_image.ppm  result_image.ppm
lab2/mult-mv/: mult_mv.cu
lab2/mult-mv/input-data/test_2025_2026/: vec_x.txt
lab2/mult-mv/output_data/test_2025_2026/: result_vec_b.txt
lab2/mult-mv/results/: mult_mv.cu  mult_mv_profile.nsys-rep
lab2/query/: query.out
lab3/mult-mm/: CMakeLists.txt  mult_mm.cu  mult_mm.h  mult_mm_granular_main.cc  mult_mm_main.cc  testcase_generator.cc
lab3/mult-mm/output_4_5_3/: C_device_tiled.txt  mat_A.txt  mat_B.txt
lab4/histogram/: CMakeLists.txt  histogram.cu  histogram.h  histogramUtils.h  histogram_main.cc
lab5/conv-1d/: CMakeLists.txt  conv_1d.cu  conv_1d.h  conv_1d_main.cc  testcase_generator.cc  testcase_verificator.cc
lab5/conv-1d/test_3_25/: convolution_device_basic.txt  convolution_device_tiled.txt  input_3_25.txt
lab5/conv-2d/: CMakeLists.txt  conv_2d.cu  conv_2d.h  conv_2d_main.cc
lab5/utils/: convFiles.h  image_diff.cc
lab6/: CMakeLists.txt  reduction.cu  reduction.h  reduction_main.cc
lab7/scan/: CMakeLists.txt  scan.cu  scan.h  scan_main.cc
